# adaptive

./: .gitignore  LICENSE  README.md  Workbook.html  Workbook.qmd  dashboard.css  dashboard.html  dashboard.qmd  pyproject.toml  workbook.css
Data/: Women's Adaptive Practice - 1_27.csv  Women's Adaptive Practice - 2_11.csv  Women's Adaptive Practice - 2_17.csv  Women's Adaptive Practice - 2_19.csv  Women's Adaptive Practice - 2_23.csv  Women's Adaptive Practice - 2_24.csv  Women's Adaptive Practice - 2_3.csv  Women's Adaptive Practice - 2_5.csv  Women's Adaptive Practice - 3_21.csv  Women's Adaptive Practice - 3_26.csv  Women's Adaptive Practice - 3_3.csv  Women's Adaptive Practice - 3_31.csv  Women's Adaptive Practice - 4_22.csv  data.txt
adaptive_athletics/: __init__.py  data_pipeline.py
