[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_athletics"
version = "0.1.0"
description = "A short description of your project"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "ipykernel>=6.0",
    "pyyaml>6.0",
    "nbformat>=5.0",
    "nbclient>=0.8",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
]